Filebrowser does not show thumbnails #74612

Closed
opened 2020-03-10 10:20:04 +01:00 by Philipp Oeser · 17 comments
Member

System Information
Operating system: Linux-5.4.17-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44

Blender Version
Broken: version: 2.83 (sub 7), branch: master, commit date: 2020-03-10 07:58, hash: 2841b2be39
Worked: 2841b2be3949^

Short description of error
Filebrowser does not show thumbnails

Exact steps for others to reproduce the error

  • open blender with factory settings
  • change to Shading workspace
  • browse to any directory containing images
  • icons are shown, but not their thumbnails

image.png

Caused by 2841b2be39

#74609 (File Selector Crashes Showing Thumbnails) is probably related

**System Information** Operating system: Linux-5.4.17-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44 **Blender Version** Broken: version: 2.83 (sub 7), branch: master, commit date: 2020-03-10 07:58, hash: 2841b2be39 Worked: 2841b2be3949^ **Short description of error** Filebrowser does not show thumbnails **Exact steps for others to reproduce the error** - open blender with factory settings - change to `Shading` workspace - browse to any directory containing images - icons are shown, but not their thumbnails ![image.png](https://archive.blender.org/developer/F8398736/image.png) Caused by 2841b2be39 #74609 (File Selector Crashes Showing Thumbnails) is probably related
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

#74584 was marked as duplicate of this issue

#74584 was marked as duplicate of this issue

#74531 was marked as duplicate of this issue

#74531 was marked as duplicate of this issue

#74529 was marked as duplicate of this issue

#74529 was marked as duplicate of this issue
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Author
Member

Added subscriber: @brecht

Added subscriber: @brecht
Author
Member

Also looks like we enter inf loop around filelist_cache_preview_runf

CC @brecht

Also looks like we enter inf loop around `filelist_cache_preview_runf` CC @brecht
Member
#74584
Brecht Van Lommel self-assigned this 2020-03-10 10:51:39 +01:00

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Also: #74531

Also: #74531
Author
Member

Sorry, missed the previous reports, but since I have the culprit nailed here, will merge the other reports in...

Sorry, missed the previous reports, but since I have the culprit nailed here, will merge the other reports in...
Author
Member

Added subscribers: @ronsn, @iss, @bent

Added subscribers: @ronsn, @iss, @bent
Author
Member

Added subscriber: @dark999

Added subscriber: @dark999
Author
Member

Added subscriber: @Offline

Added subscriber: @Offline

This issue was referenced by 85cdf9a1b9

This issue was referenced by 85cdf9a1b9e8e47997d92e45657975a0a053de68

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74612
No description provided.