Fix T74612: file browser thumbnails not showing and using CPU continuously

This started happening after changing filter ID to 64 bit in rB2841b2be3949,
however there was a pre-existing error here in the comparison to detect updates
to filter flags.